# TexGen

./: .gitignore  CMakeLists.txt  README.md  SetVersion.py  changelog.txt
Core/: CMakeLists.txt  Extramesh.cpp  Materials.h  Mesh.cpp  TexGen.h
Docs/: texgenimp.dot
Export/: Exporter.cpp
GUI/: TexGen.fbp  TexGen.xrc
Installer/: texgen-64bit-bundle-Python27-2012.nsi  texgen-64bit-bundle-Python27-2017.nsi  texgen-64bit-bundle-Python312-2017.nsi  texgen-64bit-bundle-Python39-2017.nsi  texgen-64bit-bundle2008.nsi  texgen-bundle.nsi  texgen-bundle2008.nsi  texgen-bundle2008_Python27.nsi  texgen.nsi  texgen2008.nsi  texgen2012.nsi  texgen2017.nsi  texgenPython3-2017.nsi  texgenPython312-2017.nsi
OctreeRefinement/include/: unistd.h
Python/: CMakeLists.txt  Core.i
UnitTests/: DryFibreULSurfaceTest.inp  DryFibreWholeSurfaceTest.inp  RotatedVoxelMeshTest.inp  TetgenTestPeriodic.inp  VoxelContinuumTest.inp  vmesh.inp
tetgenlib/: CMakeLists.txt
units/: units.c
